Delete total field
