# docs/swagger.json
@@ -224,7 +224,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.SqlQueriesListResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/serializer.SqlQueryJSON"
+                            }
                         }
                     },
                     "400": {
@@ -963,20 +966,6 @@
                 },
                 "video_url": {
                     "type": "string"
-                }
-            }
-        },
-        "serializer.SqlQueriesListResponse": {
-            "type": "object",
-            "properties": {
-                "items": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/serializer.SqlQueryJSON"
-                    }
-                },
-                "total": {
-                    "type": "integer"
                 }
             }
         },
